// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Add Improvements container component > displays the improvement types in order 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div />
  .c0 {
  background-color: #f2f2f2;
  padding-top: 1rem;
}

.c2 {
  font-weight: bold;
  color: var(--theme-blue-100);
  border-bottom: 0.2rem var(--theme-blue-90) solid;
  margin-bottom: 2.4rem;
}

.c1 {
  margin: 1.6rem;
  padding: 1.6rem;
  background-color: white;
  text-align: left;
  border-radius: 0.5rem;
}

.c4.required::before {
  content: '*';
  position: absolute;
  top: 0.75rem;
  left: 0rem;
}

.c3 {
  font-weight: bold;
}

<div
    class="c0"
  >
    <div
      class="c1 form-section"
    >
      <h2
        class="c2"
      >
        <div
          class="no-gutters row"
        >
          <div
            class="align-content-end col"
          >
            Commercial Improvements
          </div>
        </div>
      </h2>
      <div
        class="collapse show"
      >
        <div
          class="pb-2 row"
        >
          <div
            class="pr-0 text-left col-3"
          >
            <label
              class="c3"
            >
              Unit #:
            </label>
          </div>
          <div
            class="c4 text-left col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-improvements.0.address"
                name="improvements.0.address"
                style="word-break: break-all;"
                title="test address 1"
                value="test address 1"
              />
            </div>
             
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="pr-0 text-left col-3"
          >
            <label
              class="c3"
            >
              Building size:
            </label>
          </div>
          <div
            class="c4 text-left col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-improvements.0.structureSize"
                name="improvements.0.structureSize"
                style="word-break: break-all;"
                title=""
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="pr-0 text-left col-12"
          >
            <label
              class="c3"
            >
              Description:
            </label>
          </div>
          <div
            class="c4 text-left col"
          >
            <div
              class="textarea input form-group"
            >
              <textarea
                class="description form-control"
                id="input-improvements.0.description"
                name="improvements.0.description"
                placeholder="Reason for improvement and improvement details"
                rows="5"
                style="word-break: break-all;"
                title=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 form-section"
    >
      <h2
        class="c2"
      >
        <div
          class="no-gutters row"
        >
          <div
            class="align-content-end col"
          >
            Residential Improvements
          </div>
        </div>
      </h2>
      <div
        class="collapse show"
      >
        <div
          class="pb-2 row"
        >
          <div
            class="pr-0 text-left col-3"
          >
            <label
              class="c3"
            >
              Unit #:
            </label>
          </div>
          <div
            class="c4 text-left col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-improvements.1.address"
                name="improvements.1.address"
                style="word-break: break-all;"
                title="test address 3"
                value="test address 3"
              />
            </div>
             
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="pr-0 text-left col-3"
          >
            <label
              class="c3"
            >
              House size:
            </label>
          </div>
          <div
            class="c4 text-left col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-improvements.1.structureSize"
                name="improvements.1.structureSize"
                style="word-break: break-all;"
                title=""
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="pr-0 text-left col-12"
          >
            <label
              class="c3"
            >
              Description:
            </label>
          </div>
          <div
            class="c4 text-left col"
          >
            <div
              class="textarea input form-group"
            >
              <textarea
                class="description form-control"
                id="input-improvements.1.description"
                name="improvements.1.description"
                placeholder="Reason for improvement and improvement details"
                rows="5"
                style="word-break: break-all;"
                title=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 form-section"
    >
      <h2
        class="c2"
      >
        <div
          class="no-gutters row"
        >
          <div
            class="align-content-end col"
          >
            <div
              class="d-flex align-items-center"
            >
              <span>
                Other Improvements
              </span>
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon-contactInfoToolTip"
                id="contactInfoToolTip"
              >
                <svg
                  class="tooltip-icon ml-4 mb-1"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </h2>
      <div
        class="collapse show"
      >
        <div
          class="pb-2 row"
        >
          <div
            class="pr-0 text-left col-3"
          >
            <label
              class="c3"
            >
              Unit #:
            </label>
          </div>
          <div
            class="c4 text-left col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-improvements.2.address"
                name="improvements.2.address"
                style="word-break: break-all;"
                title="test address 2"
                value="test address 2"
              />
            </div>
             
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="pr-0 text-left col-3"
          >
            <label
              class="c3"
            >
              Building size:
            </label>
          </div>
          <div
            class="c4 text-left col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-improvements.2.structureSize"
                name="improvements.2.structureSize"
                style="word-break: break-all;"
                title=""
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="pr-0 text-left col-12"
          >
            <label
              class="c3"
            >
              Description:
            </label>
          </div>
          <div
            class="c4 text-left col"
          >
            <div
              class="textarea input form-group"
            >
              <textarea
                class="description form-control"
                id="input-improvements.2.description"
                name="improvements.2.description"
                placeholder="Reason for improvement and improvement details"
                rows="5"
                style="word-break: break-all;"
                title=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <button>
      Save
    </button>
  </div>
</DocumentFragment>
`;

exports[`Add Improvements container component > renders as expected 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div />
  .c0 {
  background-color: #f2f2f2;
  padding-top: 1rem;
}

.c2 {
  font-weight: bold;
  color: var(--theme-blue-100);
  border-bottom: 0.2rem var(--theme-blue-90) solid;
  margin-bottom: 2.4rem;
}

.c1 {
  margin: 1.6rem;
  padding: 1.6rem;
  background-color: white;
  text-align: left;
  border-radius: 0.5rem;
}

.c4.required::before {
  content: '*';
  position: absolute;
  top: 0.75rem;
  left: 0rem;
}

.c3 {
  font-weight: bold;
}

<div
    class="c0"
  >
    <div
      class="c1 form-section"
    >
      <h2
        class="c2"
      >
        <div
          class="no-gutters row"
        >
          <div
            class="align-content-end col"
          >
            Commercial Improvements
          </div>
        </div>
      </h2>
      <div
        class="collapse show"
      >
        <div
          class="pb-2 row"
        >
          <div
            class="pr-0 text-left col-3"
          >
            <label
              class="c3"
            >
              Unit #:
            </label>
          </div>
          <div
            class="c4 text-left col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-improvements.0.address"
                name="improvements.0.address"
                style="word-break: break-all;"
                title=""
                value=""
              />
            </div>
             
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="pr-0 text-left col-3"
          >
            <label
              class="c3"
            >
              Building size:
            </label>
          </div>
          <div
            class="c4 text-left col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-improvements.0.structureSize"
                name="improvements.0.structureSize"
                style="word-break: break-all;"
                title=""
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="pr-0 text-left col-12"
          >
            <label
              class="c3"
            >
              Description:
            </label>
          </div>
          <div
            class="c4 text-left col"
          >
            <div
              class="textarea input form-group"
            >
              <textarea
                class="description form-control"
                id="input-improvements.0.description"
                name="improvements.0.description"
                placeholder="Reason for improvement and improvement details"
                rows="5"
                style="word-break: break-all;"
                title=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 form-section"
    >
      <h2
        class="c2"
      >
        <div
          class="no-gutters row"
        >
          <div
            class="align-content-end col"
          >
            Residential Improvements
          </div>
        </div>
      </h2>
      <div
        class="collapse show"
      >
        <div
          class="pb-2 row"
        >
          <div
            class="pr-0 text-left col-3"
          >
            <label
              class="c3"
            >
              Unit #:
            </label>
          </div>
          <div
            class="c4 text-left col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-improvements.1.address"
                name="improvements.1.address"
                style="word-break: break-all;"
                title=""
                value=""
              />
            </div>
             
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="pr-0 text-left col-3"
          >
            <label
              class="c3"
            >
              House size:
            </label>
          </div>
          <div
            class="c4 text-left col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-improvements.1.structureSize"
                name="improvements.1.structureSize"
                style="word-break: break-all;"
                title=""
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="pr-0 text-left col-12"
          >
            <label
              class="c3"
            >
              Description:
            </label>
          </div>
          <div
            class="c4 text-left col"
          >
            <div
              class="textarea input form-group"
            >
              <textarea
                class="description form-control"
                id="input-improvements.1.description"
                name="improvements.1.description"
                placeholder="Reason for improvement and improvement details"
                rows="5"
                style="word-break: break-all;"
                title=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 form-section"
    >
      <h2
        class="c2"
      >
        <div
          class="no-gutters row"
        >
          <div
            class="align-content-end col"
          >
            <div
              class="d-flex align-items-center"
            >
              <span>
                Other Improvements
              </span>
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon-contactInfoToolTip"
                id="contactInfoToolTip"
              >
                <svg
                  class="tooltip-icon ml-4 mb-1"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </h2>
      <div
        class="collapse show"
      >
        <div
          class="pb-2 row"
        >
          <div
            class="pr-0 text-left col-3"
          >
            <label
              class="c3"
            >
              Unit #:
            </label>
          </div>
          <div
            class="c4 text-left col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-improvements.2.address"
                name="improvements.2.address"
                style="word-break: break-all;"
                title=""
                value=""
              />
            </div>
             
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="pr-0 text-left col-3"
          >
            <label
              class="c3"
            >
              Building size:
            </label>
          </div>
          <div
            class="c4 text-left col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-improvements.2.structureSize"
                name="improvements.2.structureSize"
                style="word-break: break-all;"
                title=""
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="pr-0 text-left col-12"
          >
            <label
              class="c3"
            >
              Description:
            </label>
          </div>
          <div
            class="c4 text-left col"
          >
            <div
              class="textarea input form-group"
            >
              <textarea
                class="description form-control"
                id="input-improvements.2.description"
                name="improvements.2.description"
                placeholder="Reason for improvement and improvement details"
                rows="5"
                style="word-break: break-all;"
                title=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <button>
      Save
    </button>
  </div>
</DocumentFragment>
`;
